samples/_failures_safe/1761713724_6b54a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3222bedf.c: In function ‘main’:
./samples/SAFE/__tmp_3222bedf.c:171:10: error: expected ‘;’ at end of input
  171 |         i
      |          ^
      |          ;
./samples/SAFE/__tmp_3222bedf.c:171:9: error: expected declaration or statement at end of input
  171 |         i
      |         ^
./samples/SAFE/__tmp_3222bedf.c:171:9: error: expected declaration or statement at end of input
